# aitelier

./: Makefile  PYPI.md  README.md  pyproject.toml
examples/: custom_agent.md  custom_agent_guideline.md
src/aitelier/agents/: __init__.py  _base.py  agent.py  base.py  errors.py  react.py
src/aitelier/errors/: __init__.py  base.py  react.py
src/aitelier/model/: __init__.py  model.py
src/aitelier/prompt/: __init__.py  _base.py  agent.py  base.py  react.py
src/aitelier/tool/: tool.py
